# markdown-vault-mcp

./: .copier-answers.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SYNC.md  mkdocs.yml  pyproject.toml  server.json
.claude-plugin/plugin/: .mcp.json  README.md
.claude-plugin/plugin/.claude-plugin/: plugin.json
.claude-plugin/plugin/skills/vault-workflow/: SKILL.md
.gemini/: config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  copier-update.yml  coverage-status.yml  docs.yml  release.yml
docs/: configuration.md  deployment.md  design.md  hooks.py  index.md  installation.md  prompts.md  resources.md
docs/api/: collection.md  config.md  exceptions.md  facets.md  git.md  providers.md  types.md  vault.md
docs/deployment/: claude-desktop.md  docker.md  index.md  oidc.md  systemd.md
docs/guides/: authentication.md  claude-code-plugin.md  claude-desktop.md  docker.md  embeddings.md  file-exchange.md  git-integration.md  index.md  mcp-apps.md  obsidian-everywhere.md  oidc-providers.md  para.md  research-workflows.md  transfer-links.md  zettelkasten.md
docs/superpowers/notes/: 2026-04-21-step4-replay-triage.md
docs/superpowers/plans/: 2026-04-03-edit-tool-improvements.md  2026-04-10-claude-plugins.md  2026-04-11-prerelease-mode.md  2026-04-16-api-docs-overhaul.md  2026-04-16-config-centralization.md  2026-04-17-llm-tool-docstrings.md  2026-04-19-llm-native-flows.md  2026-04-19-research-workflows-guide.md  2026-04-20-fastmcp-copier-scaffold-implementation.md  2026-04-20-fastmcp-pvl-core-extraction.md  2026-04-21-step4-bootstrap-replay-implementation.md  2026-04-21-step5-ig-retrofit-implementation.md  2026-04-21-step6-scholar-retrofit-implementation.md  2026-04-30-search-ranking-and-snippets.md  2026-05-10-pr442-context-cost-and-read-guards.md  2026-05-10-pr443-file-exchange-upload.md  2026-05-10-pr444-git-sync.md
docs/superpowers/specs/: 2026-04-03-edit-tool-improvements-design.md  2026-04-10-claude-plugins-design.md  2026-04-11-prerelease-mode-release-workflow-design.md  2026-04-16-api-docs-overhaul-design.md  2026-04-16-config-centralization-design.md  2026-04-17-llm-tool-docstrings-design.md  2026-04-19-llm-native-flows-design.md  2026-04-19-para-workflow-design.md  2026-04-19-research-workflows-guide-design.md  2026-04-20-fastmcp-copier-scaffold-design.md  2026-04-20-fastmcp-core-and-copier-template-design.md  2026-04-21-step4-bootstrap-replay-design.md  2026-04-21-step5-ig-retrofit-design.md  2026-04-21-step6-scholar-retrofit-design.md  2026-04-30-search-ranking-and-snippets-design.md  2026-05-10-out-of-band-file-and-git-ops-design.md
docs/tools/: index.md
examples/: bearer-auth.env  ifcraftcorpus.env  obsidian-oidc.env  obsidian-readonly.env  obsidian-readwrite.env  oidc.env
examples/para/: README.md
examples/para/prompts/: para-capture-chats.md  para-project-kickoff.md  para-triage.md  para-weekly-review.md
examples/para/templates/: area.md  inbox.md  project.md  resource.md  weekly-review.md
examples/zettelkasten/: README.md
examples/zettelkasten/prompts/: zettelkasten.md
examples/zettelkasten/templates/: fleeting.md  literature.md  moc.md  permanent.md
packaging/: env.example  markdown-vault-mcp.service  nfpm.yaml  test-install.sh
packaging/mcpb/: .gitignore  build.sh  manifest.json.in  pyproject.toml.in
packaging/mcpb/src/: server.py
packaging/scripts/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
scripts/: bump_manifests.py  bump_manifests.sh  copier_update_aggregator.py  vendor_spa.py
scripts/copier_update_prompts/: job_a.md  job_b.md  job_c.md
src/markdown_vault_mcp/: __init__.py  _cli_impl.py  _file_watcher.py  _github_webhook.py  _icons.py  _server_apps.py  _server_auth.py  _server_bootstrap.py  _server_deps.py  _server_prompts.py  _server_queryable.py  _server_readiness.py  _server_resources.py  _server_tools.py  _server_transfer.py  artifacts.py  cli.py  collection.py  config.py  exceptions.py  fts_index.py  git.py  hashing.py  mcp_server.py  providers.py  scanner.py  server.py  tracker.py  types.py  uploads.py  vault.py  vector_index.py  write_callback.py  writer.py
src/markdown_vault_mcp/config_sections/: __init__.py  _helpers.py  content.py  embeddings.py  git.py  indexing.py  search.py  sync.py  transfer.py
src/markdown_vault_mcp/facets/: __init__.py  graph.py  index.py  reader.py  writer.py
src/markdown_vault_mcp/git/: __init__.py  _run.py  conflict.py  query.py  strategy.py  types.py
src/markdown_vault_mcp/indexing/: __init__.py  coordinator.py  index_writer.py  readiness.py
src/markdown_vault_mcp/managers/: __init__.py  document.py  git_query.py  index.py  link.py  search.py
src/markdown_vault_mcp/static/: app.html  app.src.html
src/markdown_vault_mcp/static/prompts/: compare.md  discuss.md  propose-links.md  related.md  research.md  summarize.md
src/markdown_vault_mcp/transfer/: __init__.py  routes.py  store.py
src/markdown_vault_mcp/utils/: __init__.py  fs.py  fts.py  links.py  text.py
tests/: conftest.py  test_api_validation.py  test_artifacts.py  test_background_fts.py  test_boot_reconciliation.py  test_cli.py  test_collection.py  test_config.py  test_docstrings.py  test_documents_read_section.py  test_embedding_convergence.py  test_event_store.py  test_exceptions.py  test_facet_graph.py  test_facet_index.py  test_facet_reader.py  test_facet_writer.py  test_field_collapsing.py  test_file_watcher.py  test_fts_chunk_count.py  test_fts_index.py  test_fts_index_retry.py  test_fts_optimize.py  test_fts_snippet.py  test_git.py  test_git_force_methods.py  test_git_query.py  test_git_sync.py  test_github_webhook.py  test_graph.py  test_index_coordinator.py  test_index_readiness.py  test_index_writer.py  test_indexing_readiness.py  test_links.py  test_managers_document.py  test_managers_index.py  test_managers_link.py  test_managers_search.py  test_mcp_apps_browser.py  (+32 more)
tests/fixtures/: git.py  invalid_utf8.md  simple.md
