[project]
name = "markdown-vault-mcp"
version = "1.27.1"
description = "Generic markdown vault MCP server with FTS5 + semantic search"
readme = "README.md"
license = "MIT"  # project-owned — keep across copier updates
requires-python = ">=3.11"
authors = [{ name = "Peter van Liesdonk" }]
keywords = [
    "markdown",
    "mcp",
    "search",
    "fts5",
    "embeddings",
    "obsidian",
    "vault",
    "mcp-server",
    "model-context-protocol",
    "knowledge-base",
    "semantic-search",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",  # project-owned — keep across copier updates
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp-pvl-core>=1.0.0,<2",
    # PROJECT-DEPS-START — add domain dependencies below; kept across copier update
    "python-frontmatter>=1.0",
    "requests>=2.33.0",
    # PROJECT-DEPS-END
]

[project.optional-dependencies]
# PROJECT-EXTRAS-START — add domain-specific optional-dependency groups below; kept across copier update
mcp = ["fastmcp>=3.0,<4"]
embeddings-api = ["httpx>=0.25", "numpy>=1.20"]
embeddings = ["fastembed>=0.3", "numpy>=1.20"]
all = ["fastmcp>=3.0,<4", "httpx>=0.25", "fastembed>=0.3", "numpy>=1.20"]
# PROJECT-EXTRAS-END
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "diff-cover>=9.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "pip-audit>=2.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-llmstxt>=0.2",
    "pygments>=2,<2.21",
]

[project.scripts]
markdown-vault-mcp = "markdown_vault_mcp.cli:main"

[project.urls]
Repository = "https://github.com/pvliesdonk/markdown-vault-mcp"
Documentation = "https://pvliesdonk.github.io/markdown-vault-mcp/"
Issues = "https://github.com/pvliesdonk/markdown-vault-mcp/issues"
Changelog = "https://github.com/pvliesdonk/markdown-vault-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Pygments 2.20.0 crashes on filename=None in HtmlFormatter (introduced in 2.20.0,
# tracked upstream as Pygments PR #3078). Pin globally until the fix ships.
override-dependencies = ["pygments>=2,<2.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_vault_mcp"]
exclude = ["src/markdown_vault_mcp/static/app.src.html"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Phase 1 write stubs: method signatures define the public API but bodies are
# not yet implemented. ARG002 fires because parameters are unused.
"src/markdown_vault_mcp/collection.py" = ["ARG002"]
# Depends() and CurrentContext() calls in argument defaults are the standard
# FastMCP dependency injection pattern — B008 is a false positive here.
# Context/FastMCP/Collection imports must stay runtime (not TYPE_CHECKING) for
# DI resolution — TC001/TC002.
"src/markdown_vault_mcp/server.py" = ["B008", "TC002"]
"src/markdown_vault_mcp/_server_deps.py" = ["B008", "TC002"]
"src/markdown_vault_mcp/_server_tools.py" = ["B008", "TC001", "TC002"]
"src/markdown_vault_mcp/_server_resources.py" = ["B008", "TC001", "TC002"]
"src/markdown_vault_mcp/_server_prompts.py" = ["B008", "TC002"]
"src/markdown_vault_mcp/_server_apps.py" = ["B008", "TC001", "TC002"]

[tool.ruff.lint.isort]
known-first-party = ["markdown_vault_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/markdown_vault_mcp"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["frontmatter", "frontmatter.*", "yaml", "yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "markdown_vault_mcp.fts_index",
    "markdown_vault_mcp.vector_index",
    "markdown_vault_mcp.providers",
    "markdown_vault_mcp.collection",
]
# Phase 1 modules have structural type issues (FTSResult used as dict,
# numpy dtype mismatches).  TODO: fix in a dedicated type-safety PR.
ignore_errors = true

[[tool.mypy.overrides]]
# Tests pre-date the template's `mypy src/ tests/` requirement (added in
# template v1.2.0).  Typing the full test suite is tracked separately.
module = ["tests.*"]
ignore_errors = true

[tool.pyright]
# Point Pyright at the uv-managed venv so editor diagnostics resolve
# imports the same way as our CLI tools (mypy/ruff/pytest run via uv).
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
# src-layout editable installs use a .pth shim that Pyright does not execute;
# point Pyright at src/ directly so IDE import resolution matches runtime.
extraPaths = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "angular"
tag_format = "v{version}"
# Bump the versioned manifests inside the release commit rather than in a
# follow-up commit + force-retag. See issue #392.
build_command = "python scripts/bump_manifests.py"
# PSR stages and commits files listed in `assets` together with pyproject.toml
# and CHANGELOG.md, so the release tag points at a single commit containing
# all version-coupled files.
assets = [
    "server.json",
    ".claude-plugin/plugin/.claude-plugin/plugin.json",
    ".claude-plugin/plugin/.mcp.json",
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
